--- a/prueba.html
+++ b/prueba.html
@@ -7,18 +7,13 @@
 </head>
 <body>
   <h1>📸 Cámara Configurable + Marcos + QR</h1>
-  <div class="controls">
-    <label for="deviceSelect">🎥 Selecciona cámara:</label>
-    <select id="deviceSelect"></select>
-    <button id="startCamera">🔧 Iniciar Cámara</button>
-  </div>
   <div class="container">
     <div class="preview">
       <canvas id="previewCanvas"></canvas>
     </div>
     <div class="actions">
       <button id="capturar">📷 Capturar</button>
-      <button id="subir">☁️ Subir a file.io</button>
+      <button id="subir">☁️ Bajar Imagen </button>
       <div id="qr"></div>
       <div class="frame-gallery" id="frameGallery"></div>
     </div>
