--- a/prueba.html
+++ b/prueba.html
@@ -18,7 +18,7 @@
       <div class="frame-gallery" id="frameGallery"></div>
     </div>
   </div>
-  <video id="video" autoplay playsinline></video>
+  <video type="hidden" id="video" autoplay playsinline></video>
   <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
   <script src="script.js"></script>
 </body>
