--- a/prueba.html
+++ b/prueba.html
@@ -18,6 +18,7 @@
       <div class="frame-gallery" id="frameGallery"></div>
     </div>
   </div>
+  <div id="qr" class="qr-section"></div>
   <video type="hidden" id="video" autoplay playsinline></video>
   <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
   <script src="script.js"></script>
