--- a/qr.html
+++ b/qr.html
@@ -2,127 +2,119 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>🎉 Tu Código QR</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>🔗 Tu Código QR</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <meta name="theme-color" content="#000000">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-
-    body {
+    html, body {
       margin: 0;
-      font-family: 'Press Start 2P', cursive;
-      background: radial-gradient(circle at center, #1a1a2e, #0f0c29);
-      overflow: hidden;
+      padding: 0;
+      height: 100%;
+      background: #000;
+      font-family: 'Segoe UI', sans-serif;
       color: #fff;
-      text-align: center;
-    }
-
-    /* Fondo animado estilo arcade */
-    body::before {
-      content: '';
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: url('https://www.transparenttextures.com/patterns/stardust.png');
-      animation: sparkle 10s linear infinite;
-      opacity: 0.2;
-      z-index: -1;
-    }
-
-    @keyframes sparkle {
-      0% { background-position: 0 0; }
-      100% { background-position: 1000px 1000px; }
-    }
-
-    header {
-      background: linear-gradient(90deg, #ff00cc, #3333ff);
-      padding: 20px;
-      box-shadow: 0 0 20px #ff00cc;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 1.5rem;
-      color: #fff;
-      text-shadow: 0 0 10px #00ffff;
-    }
-
-    #qrContainer {
-      margin: 40px auto;
-      padding: 20px;
-      background: rgba(0, 0, 0, 0.6);
-      border-radius: 16px;
-      box-shadow: 0 0 30px #00f0ff;
-      max-width: 90vw;
       display: flex;
       flex-direction: column;
       align-items: center;
-    }
-
-    #qrContainer p {
-      color: #00ffff;
-      font-size: 0.8rem;
-      margin-bottom: 20px;
-      word-break: break-word;
+      justify-content: center;
+      overflow: hidden;
       text-align: center;
-      background: #111;
-      padding: 10px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px #00ffff;
     }
 
-    canvas {
-      max-width: 100%;
-      height: auto;
-      border: 4px solid #00ff88;
-      box-shadow: 0 0 20px #00ff88;
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      text-shadow: 0 0 10px #00f0ff;
+    }
+
+    #qr {
+      width: 300px;
+      height: 300px;
+      border: 3px solid #00f0ff;
       border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0, 255, 255, 0.3);
+      background: #fff;
+      padding: 10px;
+    }
+
+    p {
+      margin-top: 20px;
+      font-size: 1.1rem;
+      color: #00ff88;
     }
 
     button {
       margin-top: 30px;
-      padding: 14px 28px;
-      font-size: 1rem;
-      border-radius: 10px;
-      border: 3px solid #ff00cc;
-      background: #222;
+      padding: 12px 24px;
+      font-size: 1.1rem;
+      border-radius: 8px;
+      border: 2px solid #00ffff;
+      background: #111;
       color: #fff;
       cursor: pointer;
-      box-shadow: 0 0 10px #ff00cc;
-      transition: all 0.3s ease;
+      transition: background 0.3s ease;
     }
 
     button:hover {
-      background: #ff00cc;
+      background: #00ffff;
       color: #000;
-      box-shadow: 0 0 20px #ff00cc;
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      #qr {
+        width: 220px;
+        height: 220px;
+      }
+
+      p {
+        font-size: 1rem;
+      }
+
+      button {
+        font-size: 1rem;
+        padding: 10px 20px;
+      }
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>🎉 ¡Tu Foto Está Lista!</h1>
-  </header>
-
-  <div id="qrContainer"></div>
-  <button onclick="window.location.href='prueba.html'">🔙 Tomar otra foto</button>
+  <h1>🔗 Escanea tu código QR</h1>
+  <div id="qr"></div>
+  <p>Este código te lleva a tu imagen capturada.</p>
+  <button onclick="window.location.href='seleccion.html'">🔄 Tomar otra foto</button>
 
   <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
   <script>
     const params = new URLSearchParams(window.location.search);
-    const imageUrl = params.get('url');
-    const qrContainer = document.getElementById('qrContainer');
+    const url = params.get('url');
 
-    if (imageUrl) {
-      const linkText = document.createElement('p');
-      linkText.textContent = imageUrl;
-      qrContainer.appendChild(linkText);
-
-      QRCode.toCanvas(imageUrl, { width: 256 }, (err, canvas) => {
-        if (!err) qrContainer.appendChild(canvas);
+    if (url) {
+      QRCode.toCanvas(document.getElementById('qr'), url, {
+        width: 300,
+        margin: 1,
+        color: {
+          dark: "#000000",
+          light: "#ffffff"
+        }
+      }, function (error) {
+        if (error) console.error(error);
       });
     } else {
-      qrContainer.textContent = 'No se encontró la URL de la imagen.';
+      document.getElementById('qr').textContent = 'No se encontró URL.';
     }
+
+    // Activar pantalla completa al tocar
+    document.body.addEventListener('click', () => {
+      if (!document.fullscreenElement) {
+        document.documentElement.requestFullscreen().catch(err => {
+          console.warn('No se pudo activar pantalla completa:', err);
+        });
+      }
+    });
   </script>
 </body>
 </html>
